<resources>
    <string name="app_name">alarmy</string>
    <string name="next_alarm">Next alarm</string>
    <string name="_9_00_am">9:00 AM</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="today_s_panel">Today\'s panel</string>
    <string name="alarm">Alarm</string>
    <string name="_7_30_am">7:30 AM</string>
    <string name="_11_44_pm">11:44 PM</string>
    <string name="no_upcomming_alarms">No upcomming alarms</string>
    <string name="btback">TODO</string>
    <string name="bteye">TODO</string>
    <string name="_3">3</string>>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="s">S</string>
    <string name="ring_in_7_hours_and_52_minutes">Ring in 7 hours and 52 minutes</string>
    <string name="t">T</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="mission">Mission</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="ringtone">Ringtone</string>
    <string name="wake_up_check">Wake Up Check</string>
    <string name="snooze">Snooze</string>
    <string name="label">Label</string>
    <string name="no_up_coming_alarms">No up coming alarms</string>
    <string name="m_4">4</string>
    <string name="m_1">1</string>
    <string name="m_2">2</string>
    <string name="m_3">3</string>
    <string name="_th">T</string>
    <string name="_sa">Saturday</string>
    <string name="back">back</string>
    <string name="todo">TODO</string>
    <string name="sa">SA</string>
    <string name="btnback"><![CDATA[<]]></string>
    <string name="sound_power_pack">Sound Power Pack</string>
    <string name="quick_alarm">Quick alarm</string>
    <string name="x">X</string>
    <string name="plus">+</string>
    <string name="string_plus">pluss</string>
    <string name="pluss">plus</string>
    <string name="cong">+</string>
    <string name="conng">+</string>
    <string name="_9_00">9:00</string>
    <string name="_7_00">7:00</string>
    <string name="todaypanel">Today\'s panel</string>
    <string name="setting">Setting</string>
    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
       Get your photo, video, contacts, subscriptions etc on all your devices.
    </string>
    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_titke">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_vlaue">WiFi</string>
    <string name="pref_syncConnectionType_summary">WiFi</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile Data</item>
    </string-array>
    <string-array name="pref_syncConnectionType_values">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile Data</item>
    </string-array>
    <string name="title_activity_manhinhcaidat">manhinhcaidat</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_mhsetting">mhsetting</string>
    <string name="title_activity_settingg">Settingg</string>
</resources>