<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F5F5"
    android:filterTouchesWhenObscured="false"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/alarmstatus"
        android:layout_width="301dp"
        android:layout_height="39dp"
        android:text="@string/no_up_coming_alarms"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <CheckBox
        android:id="@+id/checktime1"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_baseline_more_vert_24"
        android:freezesText="false"
        android:gravity="top"
        android:text="@string/_9_00_am"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checktime3" />

    <CheckBox
        android:id="@+id/checktime2"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_baseline_more_vert_24"
        android:drawableBottom="@drawable/abc_ab_share_pack_mtrl_alpha_9"
        android:fallbackLineSpacing="false"
        android:gravity="top"
        android:text="@string/_11_44_pm"
        app:layout_constraintBottom_toTopOf="@+id/tabmain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checktime1"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checktime3"
        android:layout_width="340dp"
        android:layout_height="82dp"
        android:layout_marginTop="120dp"
        android:drawableEnd="@drawable/ic_baseline_more_vert_24"
        android:gravity="top"
        android:text="@string/_7_30_am"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plusmain"
        android:layout_width="63dp"
        android:layout_height="61dp"
        android:background="#1C23BD"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#676DF6"
        app:layout_constraintBottom_toBottomOf="@+id/tabmain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86"
        app:srcCompat="@drawable/fab_add" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabmain"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="#F40000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabTextColor="#FBFBFB">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabalarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/round_alarm_dark"
            android:text="@string/alarm" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabhistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_timeline_white_24dp"
            android:text="@string/history" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabpanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_art_track_white_24dp"
            android:text="@string/today_s_panel" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabsetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_settings_white_24dp"
            android:text="@string/settings" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>