<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <FrameLayout
        android:id="@+id/frament_container"
        android:layout_width="411dp"
        android:layout_height="655dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/setting3"
        android:layout_width="100dp"
        android:layout_height="59dp"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_settings_white_24dp"
        android:text="@string/setting"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/alarmmm4"
        android:layout_width="100dp"
        android:layout_height="59dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_alarm_white_24dp"
        android:text="@string/alarm"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/todaypanel3"
        android:layout_width="101dp"
        android:layout_height="59dp"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_art_track_white_24dp"
        android:text="@string/todaypanel"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setting3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/history3"
        android:layout_width="106dp"
        android:layout_height="59dp"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_timeline_white_24dp"
        android:text="@string/history"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/todaypanel3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

</androidx.constraintlayout.widget.ConstraintLayout>