<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/alarmmm5"
        android:layout_width="100dp"
        android:layout_height="59dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_alarm_white_24dp"
        android:text="@string/alarm"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btsetting2"
        android:layout_width="100dp"
        android:layout_height="59dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_settings_white_24dp"
        android:text="@string/setting"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Todaypanel" />

    <Button
        android:id="@+id/history4"
        android:layout_width="106dp"
        android:layout_height="59dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_timeline_white_24dp"
        android:text="@string/history"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/todaypanel4"
        android:layout_width="101dp"
        android:layout_height="59dp"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:background="#F60B0B"
        android:drawableBottom="@drawable/ic_art_track_white_24dp"
        android:text="@string/todaypanel"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="622dp" />

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>